# blue_ml-preview

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
blue_ml/: __init__.py  _utils.py  config.py
blue_ml/analysis/: __init__.py  plotting.py  utils.py
blue_ml/dataprocessing/: __init__.py  categories.py  plotting.py  utils.py  variables.py
blue_ml/datasets/: __init__.py  _datasets.py
blue_ml/datasets/dhi_waterbench_sw/: README.md  timeseries_6201045.nc  timeseries_6201047.nc  timeseries_6201050.nc  timeseries_6201059.nc  timeseries_A121.nc  timeseries_Europlatform2.nc  timeseries_Europlatform3.nc  timeseries_F3platform.nc  timeseries_IJmuidenMunitiestort.nc  timeseries_J61.nc  timeseries_K13a.nc  timeseries_L91.nc  timeseries_Nymindegab.nc  timeseries_Oosterschelde11.nc  timeseries_Q1.nc  timeseries_WaddenEierlandseGat.nc
blue_ml/io/: __init__.py  _io.py  _timeseries.py
blue_ml/machinelearning/: __init__.py  interface.py  windowgenerator.py
blue_ml/machinelearning/architectures/: __init__.py  _io.py  base_class.py
blue_ml/machinelearning/architectures/keras/: __init__.py  base_class.py  keras.py
blue_ml/machinelearning/architectures/regression/: __init__.py  base_class.py  gradient_boosting.py  linear.py  randomforest.py
blue_ml/modelframe/: __init__.py  _modelframe.py
blue_ml/skill/: __init__.py  modelskill.py
blue_ml/timeseries/: __init__.py  _mixins.py  _report.py  timeseries.py  timeseries_data.py  timeseries_item.py
blue_ml/timeseries/attributes/: __init__.py  attribute_manager.py
blue_ml/timeseries/converters/: __init__.py  format_converter.py
blue_ml/timeseries/factories/: __init__.py  timeseries_factory.py
blue_ml/timeseries/io/: __init__.py  timeseries_io.py
blue_ml/timeseries/ml/: __init__.py  ml_adapter.py
blue_ml/timeseries/operations/: __init__.py  missing_values.py  modifier.py  resampler.py  selector.py  splitter.py
blue_ml/timeseries/pipeline/: __init__.py  _pipeline.py
blue_ml/timeseries/plotting/: __init__.py  _plot.py
blue_ml/timeseries/preprocessing/: __init__.py  _parser.py  dfs.py  utils.py
blue_ml/timeseries/rendering/: __init__.py  timeseries_renderer.py
blue_ml/timeseries/transforms/: __init__.py  _base_class.py  _transforms.py
blue_ml/timeseries/validation/: __init__.py
notebooks/: WorkflowExample.ipynb
