[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue_ml"
version = "0.5.1"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.0",
    "xarray>=2025.10.0",
    "h5netcdf>=1.4.1",
    "modelskill>=1.2.0",
    "tensorflow>=2.20.0",
    "protobuf>=5.28.2,<6.0.0",  # TensorFlow 2.20+ requires protobuf <6.0.0
    "mikeio>=2.6.0",
    "darts>=0.29.0,<=0.35.0",  # darts 0.29.0+ supports Python 3.12
    "plotly",
    "seaborn",
    "setuptools<67",
]

authors = [
    { name = "Stephan Kistner", email = "stki@dhigroup.com" },
    { name = "Jannik Elsasser", email = "jael@dhigroup.com" },
    { name = "Jaume Palmer Real", email = "japr@dhigroup.com" },
]

description = "Time series prediction, simplified"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ipykernel>=6.29.5",
    "ipywidgets",
    "pip>=24.2",
    "ruff>=0.6.2",
    "types-python-dateutil>=2.9.0.20240821",
    "types-tensorflow>=2.18.0.20251008",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
    "scipy-stubs>=1.16.2.4",
    "pandas-stubs",
    "types-seaborn",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
]
test = [
    "pytest",
    "pytest-cov",
    "netCDF4",
    "mypy",
    "darts",
    "ruff==0.8.*",
    "pandas-stubs",
    "types-seaborn",
    "scipy-stubs",
    "types-python-dateutil",
    "types-tensorflow",
]

notebooks = ["jupyter"]


[project.urls]
"Homepage" = "https://github.com/DHI/blue_ml-preview"
"Bug Tracker" = "https://github.com/DHI/blue_ml-preview/issues"

[tool.pytest.ini_options]
markers = [
    "perf_basic: Basic performance tests (run by default)",
    "perf_advanced: Advanced performance tests (skipped by default, use -m perf_advanced to run)",
]
addopts = "-m 'not perf_advanced'"

[tool.ruff]
lint.select = ["F", "E4", "E7", "E9", "D"]
# Select default and all Docstring checks (D)
# E4: Checks for issues related to imports and code layout. (e.g., E402 for imports not at the top of the file).
# E7: Checks for runtime errors and dubious code. (e.g., E712 for comparing a variable directly to True or False).
# E9: Checks for syntax errors (e.g., syntax errors that prevent compilation).

lint.ignore = ["D102", "D105", "D401"]
# D102: Missing docstrings in less critical public methods
# D105: Missing docstrings in magic methods (__getitem__, __iter__, __repr__, etc.)
# D401: A few remaining imperative mood issues

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
# Minimum uv version required
required-version = ">=0.9.8"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = ""
upload_to_pypi = false
upload_to_release = true
major_on_zero = false  # Prevents 0.x.x -> 1.0.0 on feat commits
allow_zero_version = true  # Allows staying on 0.x.x versions

[tool.semantic_release.changelog]
default_templates = { changelog_file = "CHANGELOG.md" }

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.commit_parser_options]
# All conventional commit types that should be parsed for changelog
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]

